<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/respiratoryRate"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="5dp"
        android:text="@string/measure_respiratory_rate"
        app:layout_constraintBottom_toTopOf="@+id/respiratoryRateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartRateView" />

    <TextView
        android:id="@+id/heartRateView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="136dp"
        android:text="0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartRate" />

    <TextView
        android:id="@+id/respiratoryRateView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="136dp"
        android:text="0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respiratoryRate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/heartRate"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="5dp"
        android:text="@string/measure_heart_rate"
        app:layout_constraintBottom_toTopOf="@+id/heartRateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captureVideo" />

    <Button
        android:id="@+id/captureVideo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="20dp"
        android:text="@string/capture_video"
        app:layout_constraintBottom_toTopOf="@+id/heartRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptoms" />

    <Button
        android:id="@+id/symptoms"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="20dp"
        android:text="@string/select_symptoms"
        app:layout_constraintBottom_toTopOf="@+id/captureVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uploadSigns"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="45dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respiratoryRateView" />

</androidx.constraintlayout.widget.ConstraintLayout>